src/objects/CASS_No__c.object
<CustomObject>
    <fields>
        <fullName>AdminSystemValue__c</fullName>
        <label>AdminSystemValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cass_No__c</fullName>
        <externalId>true</externalId>
        <label>Cass No</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ContEquivLastUpdateDate__c</fullName>
        <description>MDM</description>
        <label>ContEquivLastUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ContEquivLastUpdateUser__c</fullName>
        <description>MDM</description>
        <label>ContEquivLastUpdateUser</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CASS Numbers</relationshipLabel>
        <relationshipName>CASS_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>XEffectiveEndDate__c</fullName>
        <description>MDM</description>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>XEffectiveStartDate__c</fullName>
        <description>MDM</description>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>CASS Number</label>
    <nameField>
        <displayFormat>CASS-{00000}</displayFormat>
        <label>CASS Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CASS Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>